--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,5 +1,7 @@
 ---
-title: My Document
+title: About Uberrimae Fidei
 date: 2023-09-20
 excludeFromList: true
 ---
+
+Uberrimae Fidei means "of the utmost good will"
