--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -3,8 +3,8 @@ title: About Uberrimae Fidei
 excludeFromList: true
 ---
 
-Uberrimae Fidei means "of the utmost good will" and we wanted to build an insurance product around that idea. 
-and within insurance, the best example of that is captive style insurance, so that is why we created Uberrimae Fidei, the Bitcoin Captive Insurer. 
+Uberrimae Fidei means "of the utmost good faith" and we wanted to build a Bitcoin insurance product around that idea.
+Within insurance, the best example of that is captive style insurance, so that is why we created Uberrimae Fidei, the Bitcoin Captive Insurer. 
 
 ### What is Bitcoin Captive Insurance?
 
