--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -10,8 +10,8 @@ Within insurance, the best example of that is captive style insurance, so that i
 
 Bitcoin has become a valuable asset for both individuals and institutions and as more people invest
 in Bitcoin, it's crucial to find effective ways to insure these digital assets. That's where
-Bitcoin Captive Insurance (BCI) comes into play—a unique insurance model that provides coverage
-for your Bitcoin holdings while giving you back all underwriting profit.
+Bitcoin Captive Insurance (BCI) comes into play — a unique insurance model that provides coverage
+for your Bitcoin holdings while returning any underwriting profit back to you.
 
 ### Traditional Insurance vs. Bitcoin Captive Insurance
 
@@ -19,8 +19,9 @@ In traditional insurance, roughly 50% of your premiums are set aside in an inter
 to cover any future potential claims. And during the course of your policy, any claims you have
 will come out of this pool, but when your insurance policy expires, any remaining funds in there
 will go to the insurance company as profit.
-However, a captive insurance model allows for individuals to own the insurance the company, write an 
-insurance policy for themselves, and then to retain any and all underwriting profit. There are many 
+
+On the contrast, a captive insurance model allows for individuals to own the insurance the company, write an 
+insurance policy for themselves, and then to retain any underwriting profit. There are many 
 hurdles to creating a captive insurance model and not everyone will even qualify, but those that do 
 will benefit from insuring their bitcoin, owning part of an insurance company, and receiving underwriting 
 profits.
