--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -3,35 +3,37 @@ title: About Uberrimae Fidei
 excludeFromList: true
 ---
 
-Uberrimae Fidei means "of the utmost good faith" and we wanted to build a Bitcoin insurance product around that idea.
-Within insurance, the best example of that is captive style insurance, so that is why we created Uberrimae Fidei, the Bitcoin Captive Insurer. 
+Uberrimae Fidei, a Latin expression translating to 'of the utmost good faith,' served as our inspiration for developing a Bitcoin insurance product. In the insurance field, an ideal approach involves adopting a captive-style insurance structure, which returns ownership and control back to the policy holder. Our commitment to safeguarding cryptocurrency assets has driven us to establish a Bitcoin captive insurance framework, that adheres to the principles of the utmost good faith when insuring Bitcoin. 
+
 
 ### What is Bitcoin Captive Insurance?
 
 Bitcoin has become a valuable asset for both individuals and institutions and as more people invest
 in Bitcoin, it's crucial to find effective ways to insure these digital assets. That's where
-Bitcoin Captive Insurance (BCI) comes into play — a unique insurance model that provides coverage
+Bitcoin Captive Insurance (BCI) comes into play, which is a unique insurance model that provides coverage
 for your Bitcoin holdings while returning any underwriting profit back to you.
 
 ### Traditional Insurance vs. Bitcoin Captive Insurance
 
-In traditional insurance, roughly 50% of your premiums are set aside in an interest-earning pool
+In traditional insurance, roughly 50% of your premiums are put into an interest-earning pool
 to cover any future potential claims. And during the course of your policy, any claims you have
 will come out of this pool, but when your insurance policy expires, any remaining funds in there
 will go to the insurance company as profit.
 
-On the contrast, a captive insurance model allows for individuals to own the insurance the company, write an 
-insurance policy for themselves, and then to retain any underwriting profit. There are many 
-hurdles to creating a captive insurance model and not everyone will even qualify, but those that do 
+On the contrast, a captive insurance model allows for individuals to own part of an insurance the company, write an 
+insurance policy for themselves, and then to retain any underwriting profit. There are 
+requirements to joining a captive insurance program and not everyone will even qualify, but those that do 
 will benefit from insuring their bitcoin, owning part of an insurance company, and receiving underwriting 
 profits.
 
 ### Benefits of Bitcoin Captive Insurance
-- Potential for Profit: With BCI, you and the other owners can potentially earn profits, especially if there are no losses. It's like having a smart investment plan for your Bitcoin.
+- Potential for Profit: With BCI, you and the other owners can potentially earn profits. It's like having a smart investment plan for your Bitcoin.
 - Tax Advantages: BCI comes with tax benefits. You can write off the money you put into the insurance as a business expense, leading to potential tax savings.
-- Effective Risk Management: BCI helps you manage the risk of holding Bitcoin. If any issues arise, the insurance pool can help cover the costs, reducing potential financial burdens.
+- Effective Risk Management: Uberrimae Fidei helps you manage the risk of holding Bitcoin. If any issues arise, the insurance pool can help cover the costs, reducing potential financial burdens.
 - Enhanced Security Measures: As owners of the insurance company, you have a vested interest in improving security measures to protect your valuable Bitcoin holdings.
-- A single comprehensive insurance policy: coverage can be tailored to you as captive members will benefit from having a single policy that offers comprehensive coverage including all known attack vectors  Coverage areas include:
+- A single comprehensive insurance policy: coverage can be tailored to you as captive members will benefit from having a single policy that offers comprehensive coverage including all known attack vectors. 
+
+Coverage areas include:
     - Idle Asset Coverage: insures against such loss of assets where no previous approval was recorded on the blockchain
     - Transaction Coverage: insures against the loss of assets during the course of a transaction
     - DeFi Coverage: insures against the loss of funds that are deployed in the defi stack
