--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -3,7 +3,7 @@ title: About Uberrimae Fidei
 excludeFromList: true
 ---
 
-Uberrimae Fidei, a Latin expression translating to 'of the utmost good faith,' served as our inspiration for developing a Bitcoin insurance product. In the insurance field, an ideal approach involves adopting a captive-style insurance structure, which returns ownership and control back to the policy holder. Our commitment to safeguarding cryptocurrency assets has driven us to establish a Bitcoin captive insurance framework, that adheres to the principles of the utmost good faith when insuring Bitcoin. 
+Uberrimae Fidei is a Latin expression translating to 'of the utmost good faith' and served as our inspiration for developing a Bitcoin insurance product. In the insurance field, an ideal approach involves adopting a captive-style insurance structure, which returns ownership and control back to the policy holder. Our commitment to safeguarding cryptocurrency assets has driven us to establish a Bitcoin captive insurance framework, that adheres to the principles of the utmost good faith when insuring Bitcoin. 
 
 
 ### What is Bitcoin Captive Insurance?
